2008-07-20  Inge Wallin  <inge@lysator.liu.se>

	Restore forward compatibility
	* src/lib/MarbleModel.{h,cpp}: Make all members part of the
	private class.

	Reduce warnings: Initialize in the right order.
	* src/lib/geodata/data/GeoDataPlacemark.cpp (GeoDataPlacemarkPrivate),
	* src/lib/geodata/data/GeoDataPolygon.cpp (GeoDataPolygonPrivate),
	* src/lib/geodata/scene/GeoSceneLayer.cpp (GeoSceneLayer): Initialize in the right order.

	Cleanup: Make the d pointer actually be named d.
	* src/lib/geodata/data/GeoDataPolygon.{h,cpp},
	* src/lib/geodata/data/GeoDataGeometry.{h,cpp},
	* src/lib/geodata/data/GeoDataCoordinates.{h,cpp},
	* src/lib/geodata/data/GeoDataHotSpot.{h,cpp}: rename the d pointer.
	
2008-07-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/HttpFetchFile.cpp:

    Clean up last commit:
    - Remove commented out code.
    - Comment out debug output as it was before.

2008-07-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/HttpFetchFile.cpp:
    * src/lib/HttpFetchFile.h:
    * src/lib/HttpDownloadManager.cpp:

    Fix bug 162681 in trunk (slow tile download).
    The problem with the download implementation was that
    there was only one QHttp object in HttpFetchFile, throught
    which all requests were serialized.
    Now we have got one QHttp object per active HttpJob, so
    this bottleneck is gone now.

2008-07-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/marble_part.cpp:

    Fix "exit full screen mode".

2008-07-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/dgml/DgmlDownloadUrlTagHandler.cpp:
    * src/lib/geodata/scene/GeoSceneTexture.cpp:
    * src/lib/geodata/scene/GeoSceneTexture.h:
    * data/maps/earth/openstreetmap/openstreetmap.dgml:

    Implement round robin algorithm for fetching tiles.
    This was brought up by the OpenStreetMap tile server admins
    and should go into 4.1 as well.

2008-07-07  Patrick Spendrin    <ps_ml@gmx.de>
